# rsquid

./: Cargo.toml  NOTICE  README.md
.github/workflows/: release.yml
src/: main.rs
src/gui/: components.rs  connection_list.rs  history.rs  input_overlay.rs  mod.rs  new_connection.rs  query_page.rs
src/gui/gui_helpers/: history_helpers.rs  mod.rs  query_page_helpers.rs
src/helpers/: connection.rs  keyboard.rs  mod.rs  mysql.rs  postgres.rs  query_executor.rs  sqlite.rs  utils.rs
src/utils/: connection.rs  keyboard.rs  mysql.rs  postgres.rs  query_executor.rs  sqlite.rs
