[package]
name = "db-client-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "mysql",
    "sqlite"
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"