[package]
name = "rsquid"
version = "1.1.1"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use the bigdecimal crate dependency
bigdecimal = "0.4.4" 
sqlx = { version = "^0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "bigdecimal"
] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"
chrono = "0.4.42"